# FundamentalAnalysis-4

./: AllEquity.xlsx  DCFCalculation.xlsm  FCF.xlsx  FundamentalAnalysis.xlsm  FundamentalAnalysis.xltm  README.md
Codes/: LoadingSheets.bas
Codes/python/: Balrampur Chini analysis.ipynb  README.md  StockFilter.ipynb  fundamental analysis.ipynb  nohup.out  readme.md  tmux_setup.sh
Codes/python/.ipynb_checkpoints/: fundamental analysis-checkpoint.ipynb
Codes/python/stockLib/: README.md  environment.yml  pyproject.toml  setup.py
Codes/python/stockLib/stockLibraries/: CAPMModel.py  DividendModel.py  FinancialDetails.py  getDividendDetails.py  getStockDetails.py  getStockFinancialDetails.py  intrinsicValuation.py  main.py  wacc.py  wacc_dividendModel.py
Codes/python/stockLib/stockLibraries.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Codes/python/stockLib/stockLibraries/Services/: CAPMModelService.py  DividendModelService.py  Factory.py  InvestingService.py  MoneyControlService.py  NseIndiaService.py  TrendlyneService.py  WorkflowService.py  iModelServiceInterface.py
Codes/python/stockLib/stockLibraries/config/: configuration.yaml
Codes/python/stockLib/stockLibraries/entities/: Stock.py
Codes/python/stockLib/stockLibraries/helper/: util.py
Codes/python/stockLib/stockLibraries/resources/: configuration.yaml  stock_metadata.csv  stock_metadata.json  stock_metadata.xlsx  stocks.xlsx
Codes/visualBasic/: CashFlowAnalysis.bas  LoadingSheets.bas  Utilities.bas
excelSheets/: FundamentalAnalysis.xltm  ITC_CAPM.ods  WACC.xlsx  betaValue.xls
(+4 files in other folders)
