[tool.poetry]
name = "stocklib"
version = "0.1.0"
description = ""
authors = ["SudeshnaBora <sudeshnamani1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
requests = "^2.28.2"
bs4 = "^0.0.1"
pyyaml = "^6.0"
openpyxl = "^3.1.1"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
